src/objects/Cause__c.object
<CustomObject>
    <fields>
        <fullName>Br__c</fullName>
        <formula>PO__c + SH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Br</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Source error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Harm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Harm</label>
        <referenceTo>Harm__c</referenceTo>
        <relationshipLabel>Causes</relationshipLabel>
        <relationshipName>Harms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hazard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazard</label>
        <referenceTo>Hazard__c</referenceTo>
        <relationshipName>Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hazardous_Situation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazard Situation</label>
        <referenceTo>Hazard_Situation__c</referenceTo>
        <relationshipName>Hazardous_Situation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <formula>PA__c * PB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>O</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA__c</fullName>
        <formula>if(TEXT(   Pre_Probability__c   )=&quot;Remote&quot;, 0.0001,if(TEXT(Pre_Probability__c  )=&quot;Possible&quot;,0.001,if(TEXT(Pre_Probability__c  )=&quot;Occasional&quot;, 0.01,0.1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB__c</fullName>
        <formula>if(TEXT( Harm__r.Probability_of_harm__c )=&quot;Unlikely&quot;,0.0009,if(TEXT(Harm__r.Probability_of_harm__c )=&quot;Rare&quot;,0.001,if(TEXT(Harm__r.Probability_of_harm__c )=&quot;Possible&quot;,0.009,if(TEXT(Harm__r.Probability_of_harm__c )=&quot;Likely&quot;, 0.01,0.09))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <formula>Probability_of_Occurrence_of_Harm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_O__c</fullName>
        <formula>Post_PA__c * Post_PB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-O</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_PA__c</fullName>
        <formula>if(TEXT(  Post_Probability__c  )=&quot;Remote&quot;, 0.0001,if(TEXT(Post_Probability__c  )=&quot;Possible&quot;,0.001,if(text(Post_Probability__c  )=&quot;Occasional&quot;, 0.01,0.1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-PA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_PB__c</fullName>
        <formula>if(TEXT(  Post_Probability_of_harm__c  )=&quot;Unlikely&quot;,0.0009,if(TEXT(Post_Probability_of_harm__c )=&quot;Rare&quot;,0.001,if(text(Post_Probability_of_harm__c   )=&quot;Possible&quot;,0.009,if(TEXT(Post_Probability_of_harm__c  )=&quot;Likely&quot;, 0.01,0.09))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-PB</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Probability__c</fullName>
        <label>Post-Probability of Hazardous Situation</label>
        <picklist>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Probability_of_Occurrence_of_Harm__c</fullName>
        <formula>if( Post_O__c &lt;0.000001,&apos;P1&apos;, if (Post_O__c &lt;0.00001, &apos;P2&apos;, if(Post_O__c &lt;0.0001, &apos;P3&apos;, if (Post_O__c &lt;0.001, &apos;P4&apos;, &apos;P5&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-Probability of Occurrence of Harm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Probability_of_harm__c</fullName>
        <label>Post-Probability of Harm</label>
        <picklist>
            <picklistValues>
                <fullName>Almost certain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Prob_of_Occ_of_Harm_Number__c</fullName>
        <formula>VALUE( RIGHT( Probability_of_Occurrence_of_Harm__c , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Prob of Occ of Harm Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Probability__c</fullName>
        <label>Pre-Probability of Hazard Situation</label>
        <picklist>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Probability_of_Harm__c</fullName>
        <formula>text(Harm__r.Probability_of_harm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Probability of Harm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability_of_Occurrence_of_Harm__c</fullName>
        <formula>if( O__c &lt;0.000001,&apos;P1&apos;, if (O__c&lt;0.00001, &apos;P2&apos;, if(O__c&lt;0.0001, &apos;P3&apos;, if (O__c&lt;0.001, &apos;P4&apos;, &apos;P5&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Probability of Occurrence of Harm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction__c</fullName>
        <formula>S__c * O__c / (S__c* Post_O__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reduction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_Risk_Level_Number__c</fullName>
        <formula>Case( Residual_risk_level__c, &quot;High Risk&quot;, 3, &quot;Low Risk&quot;,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residual Risk Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_risk_acceptability__c</fullName>
        <formula>if (  Risk_Tolerance_Value__c &lt; Residual_Risk_Level_Number__c  ,&apos;Unacceptable&apos;,&apos;Acceptable&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residual Risk Acceptability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_risk_level__c</fullName>
        <formula>if(   S__c   * Post_O__c &gt;=1,&apos;High Risk&apos;,if(  S__c   * Post_O__c &lt;=-0.001,&apos;Low Risk&apos;,&apos;Medium Risk&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residual Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Level_Number__c</fullName>
        <formula>Case(  Risk_Level__c , &quot;High Risk&quot;, 3, &quot;Low Risk&quot;,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <formula>if( S__c * O__c &gt;=1,&apos;High Risk&apos;,if( S__c * O__c &lt;=-0.001,&apos;Low Risk&apos;,&apos;Medium Risk&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Process</label>
        <referenceTo>Risk_Control__c</referenceTo>
        <relationshipLabel>Causes</relationshipLabel>
        <relationshipName>Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance_Value__c</fullName>
        <formula>Case(text( Risk_Tolerance__c ),&quot;High&quot;,3,&quot;Low&quot;,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Tolerance Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance__c</fullName>
        <label>Risk Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SH_Number__c</fullName>
        <formula>VALUE( RIGHT( SH__c , 1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SH Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH__c</fullName>
        <formula>text(Harm__r.Severity_of_Harm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S__c</fullName>
        <formula>if( Text(Harm__r.Severity_of_Harm__c) = &apos;S1&apos;, 10, if(Text(Harm__r.Severity_of_Harm__c)=&apos;S2&apos;,100,if(Text(Harm__r.Severity_of_Harm__c)=&apos;S3&apos;,1000,if(Text(Harm__r.Severity_of_Harm__c)=&apos;S4&apos;,10000,100000))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>if( Residual_Risk_Level_Number__c &lt;= Risk_Tolerance_Value__c, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow_Diagram__c</fullName>
        <label>Workflow Diagram</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Cause</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>